# DIEM

./: DIEM.py  DIEM2.py  LICENSE.md  README.md  cli.py  config.yaml  embeddings.csv  pyproject.toml  requirements.txt
DIEM/: DIEM.py  __init__.py  cli.py
diem/: __init__.py  cli.py  diem.py
examples/: airlines.csv  input.txt  products.csv
test/: pyvenv.cfg
test/Scripts/: activate  activate.bat
